[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heavi"
version = "0.1.1"
description = "An RF circuit simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numba-progress>=1.1.0",
    "numba>=0.61.0",
    "numpy<2.2",
    "loguru>=0.7.3",
    "sympy>=1.13.3",
]
