[project]
name = "heavi"
version = "0.1.1"
description = "An RF circuit simulator"
authors = [
    {name = "Robert Fennis"}
]
license = {text = "MIT Lisence"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numba (>=0.61.0,<0.62.0)",
    "numpy (<2.2)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sympy (>=1.13.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
