[project]
name = "heavi"
version = "0.1.2"
description = "An RF circuit simulator"
authors = [
    {name = "Robert Fennis"}
]
license = {text = "MIT Lisence"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numba (>=0.61.0,<0.62.0)",
    "numpy (<2.2)",
    "matplotlib (<=3.9)",
    "loguru (>=0.7.3,<0.8.0)",
    "sympy (>=1.13.3,<2.0.0)"
]

[project.optional-dependencies]
build = ["setuptools", "cython"]
compile = ["cchardet"]

[tool.uv]
no-build-isolation-package = ["cchardet"]